--- a/pom.xml
+++ b/pom.xml
@@ -149,5 +149,10 @@
 			<artifactId>aspectjtools</artifactId>
 			<version>1.7.2</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.dozer</groupId>
+			<artifactId>dozer</artifactId>
+			<version>5.4.0</version>
+		</dependency>
 	</dependencies>
 </project>
