--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<cxf.version>2.6.1</cxf.version>
+		<cxf.version>2.5.1</cxf.version>
 		<spring.version>3.0.7.RELEASE</spring.version>
 	</properties>
 
@@ -106,7 +106,7 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-bundle</artifactId>
-			<version>2.5.1</version>
+			<version>${cxf.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring-web</artifactId>
