--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,16 @@
 		<spring.version>3.0.7.RELEASE</spring.version>
 	</properties>
 	<build>
-	<plugins>
-		<plugin>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>tomcat-maven-plugin</artifactId>
-			<configuration>
-				<url>http://10.10.18.152:8080/manager</url>
-				<server>myserver</server>
-				<path>/WebServiceDemo</path>
-			</configuration>
-		</plugin>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<configuration>
+					<url>http://10.10.18.168:8080/manager</url>
+					<server>myserver</server>
+					<path>/WebServiceDemo</path>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -236,6 +236,11 @@
 			<groupId>javassist</groupId>
 			<artifactId>javassist</artifactId>
 			<version>3.12.1.GA</version>
+		</dependency>
+		<dependency>
+			<groupId>jackson</groupId>
+			<artifactId>jackson-all</artifactId>
+			<version>1.9.11</version>
 		</dependency>
 	</dependencies>
 </project>
